--- a/crystal-game-server/.classpath
+++ b/crystal-game-server/.classpath
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/CrystalGameLibrary"/>
+	<classpathentry kind="lib" path="./../hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="./../junit-4.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
