Get the Location of a client. Display it on google maps. Show three dummy lcations on map as markers. For displaying google map everyone shoud have their Map Key.

--- a/crystal-game/AndroidManifest.xml
+++ b/crystal-game/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Author - Rajan Verma (Map related Stuff) -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.crystalgame"
     android:versionCode="1"
@@ -8,11 +10,39 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="18" />
 
+    <permission
+        android:name="com.example.crystalgame.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" >
+    </permission>
+
+    <uses-permission android:name="com.example.crystalgame.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <!--
+     The following two permissions are not required to use
+     Google Maps Android API v2, but are recommended.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAnclIDvlVsCx5EY2HrAFmgop9PHfLxVCw" />
+
         <activity
             android:name="com.example.crystalgame.MainActivity"
             android:label="@string/app_name" >
@@ -21,6 +51,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.crystalgame.GpsActivity"
+            android:label="@string/title_activity_gps" >
         </activity>
     </application>
 
