Add initial service code

--- a/crystal-game/AndroidManifest.xml
+++ b/crystal-game/AndroidManifest.xml
@@ -14,14 +14,18 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.crystalgame.MainActivity"
+            android:name="MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service 
+            android:name="com.example.crystalgame.communication.CommunicationService"
+            android:enabled="false">
+            
+        </service>
     </application>
 
 </manifest>
