Add basic CommunicationService on Android

--- a/crystal-game/AndroidManifest.xml
+++ b/crystal-game/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <service 
             android:name="com.example.crystalgame.communication.CommunicationService"
-            android:enabled="false">
+            android:enabled="true">
             
         </service>
     </application>
