--- a/crystal-game/AndroidManifest.xml
+++ b/crystal-game/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
-    
+
     <permission
         android:name="com.example.crystalgame.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" >
@@ -30,28 +30,28 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-    
+
     <application
         android:name="com.example.crystalgame.CrystalGame"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="4132500" />
-		<!--android:value="@integer/google_play_services_version"-->
-        
+        <!-- android:value="@integer/google_play_services_version" -->
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDqHXD71OHSJ4hnmLk4t3Np_G5RktYSQXg" />
 
         <activity
-            android:name="MainActivity"
+            android:name="com.example.crystalgame.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -59,10 +59,16 @@
             android:name="com.example.crystalgame.GpsActivity"
             android:label="@string/title_activity_gps" >
         </activity>
-        <service 
+
+        <service
             android:name="com.example.crystalgame.communication.CommunicationService"
-            android:enabled="true">
+            android:enabled="true" >
         </service>
+
+        <activity
+            android:name="com.example.crystalgame.SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
