--- a/crystal-game/AndroidManifest.xml
+++ b/crystal-game/AndroidManifest.xml
@@ -37,23 +37,23 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+		<!-- 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="4132500" />
-        <!-- android:value="@integer/google_play_services_version" -->
+        -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="4030500"/>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDqHXD71OHSJ4hnmLk4t3Np_G5RktYSQXg" />
+            android:value="AIzaSyBViFZgKDoeQPO6itlay7VA_nOOLg02Ccw" />
 
         <activity
             android:name="com.example.crystalgame.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.example.crystalgame.GpsActivity"
@@ -69,6 +69,27 @@
             android:name="com.example.crystalgame.SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
+        
+        <activity
+            android:name="com.example.crystalgame.ui.GameMenuActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name="com.example.crystalgame.ui.CreateGameActivity" >
+        </activity>
+        
+        <activity
+            android:name="com.example.crystalgame.ui.CreateGroupActivity" >
+        </activity>
+        
+        <activity
+            android:name="com.example.crystalgame.ui.GameBoundaryActivity" >
+        </activity>
+        
     </application>
 
 </manifest>
