--- a/crystal-game/AndroidManifest.xml
+++ b/crystal-game/AndroidManifest.xml
@@ -37,15 +37,15 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-		<!-- 
+
+        <!--
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="4132500" />
         -->
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="4132500"/>
-
+            android:value="4132500" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBViFZgKDoeQPO6itlay7VA_nOOLg02Ccw" />
@@ -55,9 +55,9 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name="com.example.crystalgame.GpsActivity"
@@ -73,23 +73,18 @@
             android:name="com.example.crystalgame.SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
-        
-        <activity
-            android:name="com.example.crystalgame.ui.GameMenuActivity">
+        <activity android:name="com.example.crystalgame.ui.GameMenuActivity" >
         </activity>
-        
-        <activity
-            android:name="com.example.crystalgame.ui.CreateGameActivity" >
+        <activity android:name="com.example.crystalgame.ui.CreateGameActivity" >
         </activity>
-        
-        <activity
-            android:name="com.example.crystalgame.ui.CreateGroupActivity" >
+        <activity android:name="com.example.crystalgame.ui.CreateGroupActivity" >
         </activity>
-        
-        <activity
-            android:name="com.example.crystalgame.ui.GameBoundaryActivity" >
+        <activity android:name="com.example.crystalgame.ui.GameBoundaryActivity" >
         </activity>
-        
+        <activity
+            android:name="com.example.crystalgame.DataWarehouseTestActivity"
+            android:label="@string/title_activity_data_warehouse_test" >
+        </activity>
     </application>
 
 </manifest>
