--- a/crystal-game/AndroidManifest.xml
+++ b/crystal-game/AndroidManifest.xml
@@ -88,7 +88,8 @@
         </activity>
         <activity
             android:name="com.example.crystalgame.game.GameActivity"
-            android:theme="@style/GameViewTheme" >
+            >
+            <!-- android:theme="@style/GameViewTheme"--> 
         </activity>
         <activity android:name="com.example.crystalgame.DataWarehouseTestActivity" >
         </activity>
